[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vaultsmith"
version = "0.1.0"
description = "Agent launcher and tmux orchestrator for Obsidian vault workflows."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Vaultsmith" }
]
dependencies = []

[project.scripts]
vsm = "vaultsmith.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
