[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vaultsmith"
version = "0.1.0"
description = "Agent launcher and tmux orchestrator for Obsidian vault workflows."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Vaultsmith" }
]
dependencies = []
keywords = ["obsidian", "obsidian-vault", "ai-agents", "note-taking", "tmux"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Topic :: Text Processing :: Markup :: Markdown",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/ronut01/Vaultsmith"
Repository = "https://github.com/ronut01/Vaultsmith"
Issues = "https://github.com/ronut01/Vaultsmith/issues"

[project.scripts]
vsm = "vaultsmith.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
